--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 article {
-
 }
 
 body {
-  background-color: #494545;
+  background-image: url("https://s.abcnews.com/images/Sports/WireAP_0692e035b79440cdad96070d3c8294ba_16x9_992.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y: 75px, center;
+  overflow: scroll;
 }
 
 h2 {
@@ -11,11 +14,13 @@ h2 {
 }
 
 h5 {
-  text-align: right;
+  display: inline;
+  margin-left: 100px;
 }
 
-.title {
-  background-repeat: no-repeat;
+.main {
+ 
+  
 }
 p img{
   width: 100%;
