--- a/style.css
+++ b/style.css
@@ -1,41 +1,41 @@
-
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Open Sans Condensed', sans-serif;
+  text-align: center;
+}
 
 h2 {
-  text-align: center;
-  font-family: 'Open Sans Condensed', sans-serif;
   font-size: 50px;
-}
-
-h3 {
-  padding-top: 200px;
-}
-
-h4 {
-  font-family: 'Open Sans Condensed', sans-serif;
-}
-
-header {
-  text-align: center;
+  text-transform: uppercase;
 }
 
 img {
-  width: 700px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
   object-fit: cover;
   box-sizing: border-box;
-  align-items: center;
-  justify-content: center;
 }
 
-section {
-  margin-top: 1200px;
-  text-align: center;
-}
-
-.background {
-  background-image: url("https://s.abcnews.com/images/Sports/WireAP_0692e035b79440cdad96070d3c8294ba_16x9_992.jpg");
+#background {
   background-repeat: no-repeat;
   background-position-y: 150px, center;
-  background-size: 100%;
+  border-radius: 0;
+  height: 60vh;
+  width: 100%;
+}
+
+.main {
+  position: relative;
+  top: 50%;
+}
+
+#team1{
+  width: 500px;
+  height: 500px;
+  background-color: aqua;
 }
 
 @media screen and (max-width: 500px) {
